--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ GROUPNAME=appgroup
 APP_ENV=dev
 TZ=Asia/Tokyo
 #React用
-CORS_ORIGINS=http://localhost:3000
+CORS_ORIGINS=["http://localhost:3000","http://127.0.0.1:3000"]
 
 #=====各自で設定お願いします=====
 MYSQL_PASSWORD=
