--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ MYSQL_HOST=db
 MYSQL_PORT=3306
 USERNAME=appuser
 GROUPNAME=appgroup
+MINIO_ROOT_USER=admin
+MINIO_ROOT_PASSWORD=password123
+MINIO_BUCKET_NAME=my-app-bucket
 APP_ENV=dev
 TZ=Asia/Tokyo
 #React用
