--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - minio_data:/data
     command: server --console-address ":9001" /data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/healthcheck/live"]
+      test: ["CMD", "/usr/bin/mc", "ready", "local"]
       interval: 5s
       timeout: 5s
       retries: 5
